--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <div class="middle-container">
         <div class="profile">
-          <img class="PFP" src="images/sami-modified.png" alt="PFP">
+          <img class="PFP" src="images/sami-modified.jpg" alt="PFP">
           <h2>Hello.</h2>
           <p>I am a 21 year old wannabe Web Developer. I also love to cook.</p>
         </div>
@@ -30,7 +30,7 @@
         <div class="skills">
           <h2>My Skills.</h2>
           <div class="skill-row">
-            <img class="Code" src="images/programming-code-signs.png" alt="HTML">
+            <img class="Code" src="images/code.png" alt="HTML">
             <h3>Web Development</h3>
             <p>I have started my journey into Web Development 3 months ago. I've gotten pretty good with HTML and CSS and now heading towards Javascript.</p>
           </div>
