--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
 <body>
     
     <div class="top-container">
-        <img class="top-cloud" src="images/cloud.png" alt="cloud">
+        <img class="top-cloud" src="cloud.png" alt="cloud">
 
     <h1>I'm Sami.</h1>
     <h2>a <span class="pro">pro</span>grammer</h2>
-    <img class="bottom-cloud" src="images/cloud.png" alt="cloud">
-    <img src="images/mountain.png" alt="mountain">
+    <img class="bottom-cloud" src="cloud.png" alt="cloud">
+    <img src="mountain.png" alt="mountain">
     </div>
 
     <div class="middle-container">
         <div class="profile">
-          <img class="PFP" src="images/sami-modified.jpg" alt="PFP">
+          <img class="PFP" src="sami-modified.jpg" alt="PFP">
           <h2>Hello.</h2>
           <p>I am a 21 year old wannabe Web Developer. I also love to cook.</p>
         </div>
@@ -30,12 +30,12 @@
         <div class="skills">
           <h2>My Skills.</h2>
           <div class="skill-row">
-            <img class="Code" src="images/code.png" alt="HTML">
+            <img class="Code" src="code.png" alt="HTML">
             <h3>Web Development</h3>
             <p>I have started my journey into Web Development 3 months ago. I've gotten pretty good with HTML and CSS and now heading towards Javascript.</p>
           </div>
           <div class="skill-row">
-            <img class="office" src="images/office.png" alt="Office">
+            <img class="office" src="office.png" alt="Office">
             <h3>Microsoft Office Package</h3>
             <p>I have 5 years experience with the Office Packages thus including: Excel, PowerPoint and Word. I can get around in each one of them independently.</p>
           </div>
